terraform/stacks/modules/kubernetes_kubeapps/yml/ingress-kubeapps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: service.da-aws-training.uk
spec:
  tls:
  - hosts:
    - "kubeapps.service.da-aws-training.uk"
    secretName: service.da-aws-training.uk-tls
  rules:
  - host: kubeapps.service.da-aws-training.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port:
              number: 80
